# tidesdb-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build_and_test.yml
src/: config.rs  db.rs  error.rs  ffi.rs  iterator.rs  lib.rs  stats.rs  transaction.rs
